--- a/Bang cuu chuong.html
+++ b/Bang cuu chuong.html
@@ -10,15 +10,18 @@
 
 <body>
 
-
     <script>
-
-        let a = 1
-        let i = 1
+        document.write("<table border=1 width=40%>")
         for (i = 1; i <= 9; i++) {
-            tich = a*i 
-            document.write(a + "x" + i+"=" + tich+"<br>")
+            document.write("<tr>")
+            for (n = 2; n <= 9; n++) {
+                document.write("<td>")
+                document.write(n + "x" + i + "=" + (i * n));
+                document.write("</td>");
+            }
+            document.write("</tr>")
         }
+        document.write("</table>")
 
     </script>
     </table>
