--- a/fizzbuzz voi vong lap for.html
+++ b/fizzbuzz voi vong lap for.html
@@ -13,7 +13,18 @@
         let b = parseInt(prompt("nhap so b"))
 
         for (; a <= b; a++) {
-            if (a % 15 == 0) {
+            if (a % 3 == 0 && a % 5 == 0) {
+                document.write("FizzBuzz ")
+            } else if (a % 5 == 0) {
+                document.write("fizz ")
+            } else if (a % 3 == 0) {
+                document.write("buzz ")
+            } else {
+                document.write(a + " ")
+            }
+        }
+        for (; a >= b; a--) {
+            if (a % 3 == 0 && a % 5 == 0) {
                 document.write("FizzBuzz ")
             } else if (a % 5 == 0) {
                 document.write("fizz ")
